# graph_duty_b24

./: .gitignore  architecture.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  history.py  routes.py  rules.py  schedule.py  settings.py  users.py  utils.py  webhook.py
backend/app/auth/: __init__.py  dependencies.py  security.py
backend/app/models/: __init__.py  default_users.py  duty_schedule.py  duty_schedule_user.py  field_mapping.py  update_history.py  update_rule.py  update_rule_user.py  user.py
backend/app/scheduler/: tasks.py
backend/app/schemas/: auth.py  default_users.py  duty_schedule.py  update_history.py  update_rule.py  user.py
backend/app/services/: bitrix_client.py  rule_engine.py  schedule_service.py  update_service.py
backend/docker/: Dockerfile
backend/migrations/: env.py
backend/migrations/versions/: 13a4e683a360_add_update_history_table.py  189756f3db4e_add_update_related_contacts_companies_.py  19e6c33f26e2_add_multiple_users_per_date_and_.py  20658eee69cb_add_distribution_percentage_to_update_.py  421a7b6616c8_initial_migration.py  8b81f1bbaf33_refactor_entity_config_to_rules.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/docker/: Dockerfile  nginx.conf
frontend/src/: App.tsx
frontend/src/pages/: Dashboard.tsx  History.tsx  Login.tsx  Schedule.tsx  Settings.tsx  Users.tsx
frontend/src/services/: api.ts  authApi.ts  historyApi.ts  rulesApi.ts  scheduleApi.ts  (+3 more)
(+22 files in other folders)
